# git-favorite-branch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_binaries.yml  publish_binaries.yml  release.yml  sync_dev.yml
scripts/: build.sh
src/: args.rs  cli_definitions.rs  command_manager.rs  config.rs  git_helpers.rs  lib.rs  main.rs
