[package]
description = "Tiny CLI for enforcing branching name strategy across multiple repositories"
edition = "2021"
name = "gfb"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
serde = {version = "1.0.156", features = ["derive"]}
serde_json = "1.0.94"
