[package]
authors = ["Revent Studio", "Maks Yadvinskyy <maks@revent.studio>"]
categories = ["command-line-utilities"]
description = "Tiny CLI for enforcing branching name strategy across multiple git repositories"
edition = "2021"
homepage = "https://github.com/byte-partisan/git-favorite-branch"
keywords = ["git_tool", "branch", "git_branch", "multibranch", "managment"]
license-file = "LICENSE.txt"
name = "gfb"
readme = "README.md"
repository = "https://github.com/byte-partisan/git-favorite-branch"
version = "1.0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
serde = {version = "1.0.156", features = ["derive"]}
serde_json = "1.0.94"
